Learnt padding and margin

--- a/practice/css/practice/table.html
+++ b/practice/css/practice/table.html
@@ -9,13 +9,22 @@
             border: 1px solid black;
             border-collapse: collapse;
         }
-        table {
-            width: 100%
+        table{
+            /* padding: 100px; */
+            margin-top: 100px;
+        }
+        td{
+           padding: 10px;
+           margin: 5px
         }
     </style>
 </head>
 <body>
+    <h1>SAMPLE TABLE EXERCISE</h1>
     <table>
+        <tr>
+            <th colspan="5">My Fruit Shop</th>
+        </tr>
         <tr>
             <th>No.</th>
             <th>Fruit name</th>
