Finish flexbox exercise

--- a/paul-practice/selectors/index.html
+++ b/paul-practice/selectors/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selectors</title>
-    <link rel="stylesheet" href="class.css">
-</head>
-<body>
-    <button class="btn red">Click Me!</button>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Selectors</title>
+        <!-- <link rel="stylesheet" href="class.css"> -->
+        <!-- <link rel="stylesheet" href="sibling.css" /> -->
+         <link rel="stylesheet" href="pseudo.css">
+    </head>
+    <body>
+        <!-- <button class="btn red">Click Me!</button> -->
+        <div class="container">
+            <p>1</p>
+            <p>2</p>
+            <p>2</p>
+            <p>2</p>
+            <div>
+                <p>3</p>
+                <p>7</p>
+                <p>7</p>
+                <p>7</p>
+            </div>
+            <p>4</p>
+            <p>5</p>
+        </div>
+    </body>
 </html>
