Finish up card exercise for flexbox

--- a/practice/css/Advanced/flexbox/exercise/h1-hard-products.html
+++ b/practice/css/Advanced/flexbox/exercise/h1-hard-products.html
@@ -25,7 +25,7 @@
                 margin: 20px;
                 height: 100vh;
                 padding: 20px;
-                width: 200px;
+                width: 250px;
             }
             .horizontal-line{
                 border: 1px solid #ddd;
@@ -53,7 +53,7 @@
                 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
                 text-align: center;
                 height: 450px;
-                margin-top: 20px;
+                margin: 20px 10px 10px 10px;
             }
             .product-card img {
                 width: 100%;
@@ -73,11 +73,17 @@
                 color: red
             }
             .product-add-to-cart-button{
+                margin-top: 5px;
                 background-color: #3EAAE2;
                 padding: 8px 40px 8px 40px;
                 border: 1px solid #3EAAE2;
+                border-radius: 3px;
                 color: white;
                 font-size: 16px;
+                width: 100%;
+            }
+            .product-card:hover{
+                transform: scale(1.1)
             }
         </style>
     </head>
@@ -138,6 +144,61 @@
                 </div>
             </div>
             <div class="main-content">
+                <div class="product-card">
+                    <img
+                    src="https://placehold.co/300x200"
+                    alt="Toothless"/>
+                    <div class="product-card-content">
+                        <h1 class="product-card-title">Toothless</h1>
+                        <h3 class="product-card-price">$149.99</h3>
+                        <p class="product-card-text">This is a Toothless card!</p>
+                        <button class="product-add-to-cart-button">Add to Cart</button>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img
+                    src="https://placehold.co/300x200"
+                    alt="Toothless"/>
+                    <div class="product-card-content">
+                        <h1 class="product-card-title">Toothless</h1>
+                        <h3 class="product-card-price">$149.99</h3>
+                        <p class="product-card-text">This is a Toothless card!</p>
+                        <button class="product-add-to-cart-button">Add to Cart</button>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img
+                    src="https://placehold.co/300x200"
+                    alt="Toothless"/>
+                    <div class="product-card-content">
+                        <h1 class="product-card-title">Toothless</h1>
+                        <h3 class="product-card-price">$149.99</h3>
+                        <p class="product-card-text">This is a Toothless card!</p>
+                        <button class="product-add-to-cart-button">Add to Cart</button>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img
+                    src="https://placehold.co/300x200"
+                    alt="Toothless"/>
+                    <div class="product-card-content">
+                        <h1 class="product-card-title">Toothless</h1>
+                        <h3 class="product-card-price">$149.99</h3>
+                        <p class="product-card-text">This is a Toothless card!</p>
+                        <button class="product-add-to-cart-button">Add to Cart</button>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img
+                    src="https://placehold.co/300x200"
+                    alt="Toothless"/>
+                    <div class="product-card-content">
+                        <h1 class="product-card-title">Toothless</h1>
+                        <h3 class="product-card-price">$149.99</h3>
+                        <p class="product-card-text">This is a Toothless card!</p>
+                        <button class="product-add-to-cart-button">Add to Cart</button>
+                    </div>
+                </div>
                 <div class="product-card">
                     <img
                     src="https://placehold.co/300x200"
