--- a/practice/css/Super/bg-image/index.html
+++ b/practice/css/Super/bg-image/index.html
@@ -5,18 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BG Image</title>
     <style>
+        body{
+            margin: 0;
+            padding: 0;
+            height: 2000px;
+        }
         .background-sample{
-            background-image: url("https://icon-library.com/images/small-cat-icon/small-cat-icon-1.jpg"), 
-                url("https://media.lordicon.com/upload/pages/2024_06/dGa8DgENfeW-yHnOeJ7YA.svg");
-            width: 500px;
+            background-image: url("https://t4.ftcdn.net/jpg/02/66/72/41/360_F_266724172_Iy8gdKgMa7XmrhYYxLCxyhx6J7070Pr8.jpg");
+            height: 500px;
+            background-attachment: fixed;
+                /* url("https://media.lordicon.com/upload/pages/2024_06/dGa8DgENfeW-yHnOeJ7YA.svg"); */
+            /* width: 500px;
             height: 500px;
             background-size: 30%;
-            border: 1px solid black;
-            background-repeat: repeat, no-repeat;
+            border: 1px solid black; */
+            /* background-repeat: repeat, no-repeat; */
+        }
+        .background-sample{
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <div class="background-sample"></div>
+    <div class="background-sample">
+        <h1>You can do this</h1>
+    </div>
 </body>
 </html>
