--- a/practice/css/Super/animations/index.html
+++ b/practice/css/Super/animations/index.html
@@ -27,20 +27,20 @@
 
             @keyframes slider {
                 0% {
-                    transform: translateY(-100%);
+                    transform: translateX(100%);
                     opacity: 1;
                 }
                 25% {
-                    transform: translateY(0px);
+                    transform: translateX(0px);
                     opacity: 1;
                 }
                 50% {
-                    transform: translateY(100%);
+                    transform: translateX(-100%);
                     opacity: 1;
                 }
                 50.1%,
                 100% {
-                    transform: translateY(-100%);
+                    transform: translateX(100%);
                     opacity: 1;
                 }
             }
