Hard Exercise for Responsive Web done

--- a/practice/css/Super/exercise/product-showcase.html
+++ b/practice/css/Super/exercise/product-showcase.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="hero.css" />
         <link rel="stylesheet" href="product.css" />
         <link rel="stylesheet" href="testimonial.css">
+        <link rel="stylesheet" href="footer.css">
     </head>
     <body>
         <header class="fixed-header">
@@ -124,7 +125,38 @@
         </section>
         <section class="testimonial">
             <h1>What Our Customers Say</h1>
-
+            <div class="testimonial-grid">
+                <div class="testimonial-card card">
+                    <div class="card-content">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sapiente nihil nulla dolores. Eligendi, expedita. Quae qui voluptas ullam perferendis necessitatibus non perspiciatis suscipit sint. Quibusdam consectetur minima maiores.
+                        </p>
+                        <h3>Sarah Johnson</h3>
+                        <h5>Fitness Instructor</h5>
+                    </div>
+                </div>
+                <div class="testimonial-card card">
+                    <div class="card-content">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sapiente nihil nulla dolores. Eligendi, expedita. Quae qui voluptas ullam perferendis necessitatibus non perspiciatis suscipit sint. Quibusdam consectetur minima maiores.
+                        </p>
+                        <h3>Sarah Johnson</h3>
+                        <h5>Fitness Instructor</h5>
+                    </div>
+                </div>
+                <div class="testimonial-card card">
+                    <div class="card-content">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sapiente nihil nulla dolores. Eligendi, expedita. Quae qui voluptas ullam perferendis necessitatibus non perspiciatis suscipit sint. Quibusdam consectetur minima maiores.
+                        </p>
+                        <h3>Sarah Johnson</h3>
+                        <h5>Fitness Instructor</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="footer">
+            <h3>© TechVision. All rights reserved.</h3>
         </section>
     </body>
 </html>
