--- a/practice/css/Bootstrap/exercise/h1.html
+++ b/practice/css/Bootstrap/exercise/h1.html
@@ -13,31 +13,33 @@
         <link rel="stylesheet" href="h1.css" />
         <!-- Frontawesome CDN -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
     </head>
 
     <body>
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link active" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Testimonials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
+                <div class="container">
+                    <a class="navbar-brand" href="#">Navbar</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link active" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Testimonials</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -50,32 +52,68 @@
             <div class="container text-center pt-5 pb-5">
                 <h1>Our Features</h1>
                 <div class="row pt-5">
-                    <div class="col-md-4">
-                        <div class="column-content border">
-                            <i class="bi bi-graph-up text-primary" style="font-size: 70px;"></i>
+                    <div class="col-md-4 mb-4 mb-md-0 d-flex align-items-stretch">
+                        <div class="column-content border flex-fill">
+                            <i class="bi bi-graph-up text-primary" style="font-size: 70px"></i>
                             <h1 class="fs-3">Advanced Analytics</h1>
                             <p class="fs-6 ps-2 pe-2">Our platform provides detailed analytics to help you make informed decisions.</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="column-content border">
-                            <i class="bi bi-shield-check text-primary" style="font-size: 70px;"></i>
+                    <div class="col-md-4 mb-4 mb-md-0 d-flex align-items-stretch">
+                        <div class="column-content border flex-fill">
+                            <i class="bi bi-shield-check text-primary" style="font-size: 70px"></i>
                             <h1 class="fs-3">Secure Platform</h1>
                             <p class="fs-6 ps-2 pe-2">Your data is protected with state-of-the-art security measures.</p>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="column-content border">
-                            <i class="bi bi-headset text-primary" style="font-size: 70px;"></i>
+                    <div class="col-md-4 mb-md-0 d-flex align-items-stretch">
+                        <div class="column-content border flex-fill">
+                            <i class="bi bi-headset text-primary" style="font-size: 70px"></i>
                             <h1 class="fs-3">24/7 Support</h1>
                             <p class="fs-6 ps-2 pe-2">Our customer support team is available round the clock to assist you.</p>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="container-fluid" style="background-color: #f9fafb">
+                <div class="container text-center pt-5 pb-5">
+                    <h1 class="mb-4">What Our Clients Say</h1>
+                    <div class="alert alert-success text-start" role="alert">
+                        <h2>Amazing Service!</h2>
+                        <p class="fs-6">"I've been using this company's services for over a year now, and I'm extremely satisfied with their performance. Their customer support is outstanding!"</p>
+                        <hr />
+                        <p>- John doe, CEO of Example Corp.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container pt-5 pb-5">
+                <h1 class="text-center mb-5">Contact Us</h1>
+                <form class="w-75 mx-auto">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" name="name" id="name" aria-describedby="Name" placeholder="Name" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" name="email" id="email" aria-describedby="Email" placeholder="Email" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" name="message" id="message" rows="5"></textarea>
+                    </div>
+                    <button class="btn btn-primary">Send Message</button>
+                </form>
+            </div>
         </main>
         <footer>
             <!-- place footer here -->
+             <div class="container-fluid text-center bg-dark p-4">
+                <i class="bi bi-facebook p-2 text-white"></i>
+                <i class="bi bi-twitter p-2 text-white"></i>
+                <i class="bi bi-instagram p-2 text-white"></i>
+                <i class="bi bi-linkedin p-2 text-white"></i>
+                <p class="text-white pt-2">© 2025 CompanyName. All rights reserved.</p>
+             </div>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
